--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,55 +1,17 @@
-/* styles.css */
-.custom-button {
-    background-color: #008080;
-    color: white;
-    padding: 1rem 2rem; /* py-3 px-8 */
-    border-radius: 0.5rem; /* rounded-lg */
-    font-size: 1.125rem; /* text-lg */
-    margin-top: 2rem; /* mt-8 */
-    display: inline-block;
-    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
-  }
-  
-  .custom-button:hover {
-    background-color: #007070;
-    color: white; /* Ensure the text color remains white on hover */
-
-    transform: scale(1.05);
-  }
-
-
-  /* styles.css */
-.bookbtn {
-  width: 100%; /* w-full */
-  background-color: #008080; /* bg-teal */
-  color: white; /* text-white */
-  padding: 0.5rem 1rem; /* py-2 px-4 */
-  border-radius: 0.375rem; /* rounded-md */
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); /* shadow-sm */
-  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  border: none; /* Ensure no border */
+body {
+  font-family: 'Open Sans', sans-serif !important;
 }
 
-.bookbtn:hover {
-  background-color: #007070; /* Darker teal for hover */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', sans-serif !important;
 }
 
-.bookbtn:focus {
-  outline: none; /* focus:outline-none */
-  box-shadow: 0 0 0 2px rgba(0, 128, 128, 0.5); /* focus:ring-2 and color */
-}
 
 
 /* Custom styles for checkbox */
 .custom-checkbox input[type="checkbox"] {
   accent-color: #008080; /* Teal color */
 }
-
-.custom-checkbox input[type="checkbox"]:focus {
-  outline: 2px solid #008080; /* Teal color */
-  outline-offset: 2px;
-}
-
 
 /* Default aspect ratio for mobile (16:9) */
 .carousel-item img {
@@ -64,8 +26,7 @@
   }
 }
 
-
-.custom-select:hover {
-  border-color: #00ACC1; /* Teal color */
-  box-shadow: 0 0 0 2px rgba(0, 172, 193, 0.5); /* Teal color shadow */
+::selection {
+  background: #00ACC1; /* Teal color */
+  color: rgb(0, 0, 0);
 }
